Refactor: Consolida scripts de produtos e fixa conflito de sys.path
- Mescla scripts de produtos parados e FL no novo BI_GIRO_STATUS.py.
- Corrige conflito onde o Python ignorava o ambiente virtual (.meu_ambiente).
- Implementa inserção manual via sys.path para garantir o carregamento correto dos módulos (Pandas, SQLAlchemy).

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
 
-__pycache__
+# Diretórios e arquivos de compilação/cache
+__pycache__/
+DB_ACCESS/
+config/
 
-DB_ACCESS
+# Arquivos temporarios
+*.ipynb
+*.md
+conectar.py
 
-config
-
-config\sugestao.md
+# Dependências (ambientes virtuais)
+# Editores e IDEs (Integração de Ambiente de Desenvolvimento)
+.vscode/
+.meu_ambiente/
+.idea/
+.ipynb_checkpoints
