"corrigindo os bug de path do modulo BI_ABST.py"

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,12 @@ dados_files/
 *.ipynb
 *.md
 log_erros.txt
+*.xlsx
+*.xls
 
 # Dependências (ambientes virtuais)
 # Editores e IDEs (Integração de Ambiente de Desenvolvimento)
+OUTPUT/
 .vscode/
 .meu_ambiente/
 .idea/
